--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Important to make website responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Website</title>
+     <link href="https://cdn-icons-png.flaticon.com/128/14988/14988949.png " rel="icon">
 
     <!-- Link our CSS file -->
     <link rel="stylesheet" href="css/style.css">
